# vinyl-manager

./: Cargo.toml  Rocket.toml  dev.db
.cargo/: config
migrations/2018-10-28-022018_create_repositories_table/: up.sql
src/: db.rs  main.rs  schema.rs
web/: README.md  angular.json  package-lock.json  package.json
web/src/: browserslist  index.html  styles.scss
web/src/app/: app-routing.module.ts  app.component.html  app.component.scss  app.component.ts  app.module.ts  manager.service.ts  repository.ts
web/src/app/repositories/: repositories.component.html  repositories.component.scss  repositories.component.ts
web/src/app/sidebar/: sidebar.component.html  sidebar.component.scss
