[package]
name = "vinyl-manager"
version = "0.1.0"
authors = ["Sam Lakerveld <darkwater124@gmail.com>"]
edition = "2018"

[dependencies]
diesel         = { version = "1.3.3", features = [ "sqlite" ] }
diesel_derives = "1.3.0"
hyper          = "0.12.13"
rocket         = "0.3.17"
rocket_codegen = "0.3.17"
rocket_contrib = "0.3.17"
serde          = "1.0.80"
serde_derive   = "1.0.80"
serde_json     = "1.0.32"
